pp2/samples/tested/matrix.decaf.test

*** Error line 109.
      elem = New(SparseItem);
                ^
*** syntax error

